# NeuralResonatorBela

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Toolchain.cmake  build.sh  pull_debug.sh
.devcontainer/: devcontainer.json
gui/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
gui/src/: index.tsx  types.d.ts
gui/src/BelaAPI/: BelaData.js  index.js
gui/src/components/: App.tsx  drum.tsx  vertex.tsx
gui/src/geometry/: generate_polygon.ts  index.ts  lines.ts  morphisms.ts  polygon_properties.ts
gui/src/scss/: App.scss
js/: package.json  sketch.js
js-remote/: .gitignore  package-lock.json  package.json  readme.md
js-remote/public/: robots.txt
js-remote/src/BelaAPI/: BelaWebSocket.js
js-remote/src/components/: App.tsx  drum.tsx  polygon2buffer.ts  two_opt.ts  vertex.tsx
js-remote/src/geometry/: generate_polygon.ts  index.ts  lines.ts  types.d.ts
js-remote/src/scss/: drum.scss
js/src/: index.tsx
js/src/BelaAPI/: BelaData.js
js/src/components/: drum.tsx
js/src/geometry/: morphisms.ts  polygon_properties.ts
src/: AppOptions.h  AudioFilePlayer.h  CMakeLists.txt  Filterbank.cpp  Filterbank.h  PytorchFrontend.cpp  PytorchFrontend.h  ShapeFFT.h  TwoPole.h  main.cpp  render.cpp
unused/: sketch.js
